Add backend logic

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,22 @@
-spring.security.user.password=test
+server.port: 8080
+
+# DB config
+spring.datasource.url=jdbc:postgresql://localhost:5433/demo
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate props
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+app.auth.tokenSecret=926D96C90030DD58429D2751AC1BDBBC
+app.auth.tokenExpirationMsec=864000000
+
+# For detailed logging during development
+#logging.level.dev=TRACE
+#logging.level.org.springframework=TRACE
+#logging.level.org.hibernate.SQL=TRACE
+#logging.level.org.hibernate.type=TRACE
