Update url configs

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,7 +12,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-app.auth.tokenSecret=926D96C90030DD58429D2751AC1BDBBC
+app.auth.tokenSecret=<INSERT_YOUR_TOKEN_HERE>
+# 24 * 60 * 60 * 1000
 app.auth.tokenExpirationMsec=864000000
 
 # For detailed logging during development
