--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate props
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
